--- a/Draw/Controller/Shop/VendingController.xib
+++ b/Draw/Controller/Shop/VendingController.xib
@@ -43,6 +43,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="713539296"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -65,6 +66,7 @@
 										<int key="NSvFlags">319</int>
 										<string key="NSFrameSize">{307, 338}</string>
 										<reference key="NSSuperview" ref="562959135"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="396263088"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -79,6 +81,7 @@
 										<int key="NSvFlags">319</int>
 										<string key="NSFrame">{{5, 69}, {297, 54}}</string>
 										<reference key="NSSuperview" ref="562959135"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="276348225"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -93,6 +96,7 @@
 										<int key="NSvFlags">319</int>
 										<string key="NSFrame">{{5, 171}, {297, 54}}</string>
 										<reference key="NSSuperview" ref="562959135"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="711677905"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -104,6 +108,7 @@
 										<int key="NSvFlags">319</int>
 										<string key="NSFrame">{{5, 270}, {297, 55}}</string>
 										<reference key="NSSuperview" ref="562959135"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="792334924"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -113,6 +118,7 @@
 								</array>
 								<string key="NSFrameSize">{307, 338}</string>
 								<reference key="NSSuperview" ref="792382614"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="185083813"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor" id="432984982">
@@ -126,6 +132,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{24.5, 23}, {61, 61}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="270631237"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -140,6 +147,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{24.5, 125}, {61, 61}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="113605286"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -151,6 +159,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{24.5, 223}, {61, 61}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="833121197"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -162,6 +171,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{122.5, 23}, {61, 61}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="58454433"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -173,6 +183,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{221.5, 23}, {61, 61}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="338791629"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -184,6 +195,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{23, 89}, {17, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="86274896"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -198,6 +210,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{45, 89}, {42, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="791406378"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -228,6 +241,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{23, 191}, {17, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="373843065"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -239,6 +253,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{45, 191}, {42, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="142699992"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -259,6 +274,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{23, 290}, {17, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="207098718"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -270,6 +286,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{45, 290}, {42, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="19251433"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -290,6 +307,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{121, 89}, {17, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="82807652"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -301,6 +319,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{143, 89}, {42, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="412827066"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -321,6 +340,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{220, 89}, {17, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="591335896"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -332,6 +352,7 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{242, 89}, {42, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="983130616"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -350,6 +371,7 @@
 						</array>
 						<string key="NSFrame">{{7, 53}, {307, 338}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="562959135"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="432984982"/>
@@ -362,6 +384,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{7, 6}, {37, 37}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="322271871"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -399,6 +422,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{59, 0}, {202, 43}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="792382614"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -413,6 +437,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{7, 404}, {115, 46}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="622926089"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -427,6 +452,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{130, 409}, {95, 36}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="151623773"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="432984982"/>
@@ -459,13 +485,14 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{130, 413}, {28, 28}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="427970999"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">bigCoin@2x.png</string>
+							<string key="NSResourceName">bigCoin.png</string>
 						</object>
 					</object>
 					<object class="IBUIButton" id="427970999">
@@ -473,6 +500,8 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{232, 408}, {82, 38}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -492,8 +521,9 @@
 					<object class="IBUIImageView" id="622926089">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{46, 401}, {36, 36}}</string>
+						<string key="NSFrame">{{46, 407}, {36, 36}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="146562100"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -502,6 +532,7 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="708246902"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -815,7 +846,26 @@
 			<nil key="sourceID"/>
 			<int key="maxID">43</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">PPViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/PPViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">VendingController</string>
+					<string key="superclassName">PPViewController</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/VendingController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
@@ -826,7 +876,7 @@
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="back@2x.png">{74, 74}</string>
-			<string key="bigCoin@2x.png">{134, 134}</string>
+			<string key="bigCoin.png">{16, 16}</string>
 			<string key="item_out@2x.png">{229, 91}</string>
 			<string key="orange_button@2x.png">{71, 84}</string>
 			<string key="shop_icon@2x.png">{317, 66}</string>
