--- a/Draw/Controller/Shop/VendingController~ipad.xib
+++ b/Draw/Controller/Shop/VendingController~ipad.xib
@@ -43,7 +43,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{768, 1004}</string>
 						<reference key="NSSuperview" ref="765826318"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="68029652"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -66,7 +65,6 @@
 										<int key="NSvFlags">319</int>
 										<string key="NSFrameSize">{736, 737}</string>
 										<reference key="NSSuperview" ref="1034896011"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="700841296"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -81,7 +79,6 @@
 										<int key="NSvFlags">319</int>
 										<string key="NSFrame">{{12, 150}, {712, 117}}</string>
 										<reference key="NSSuperview" ref="1034896011"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="967164981"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -96,7 +93,6 @@
 										<int key="NSvFlags">319</int>
 										<string key="NSFrame">{{12, 372}, {712, 117}}</string>
 										<reference key="NSSuperview" ref="1034896011"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="241476230"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -108,7 +104,6 @@
 										<int key="NSvFlags">319</int>
 										<string key="NSFrame">{{12, 588}, {712, 120}}</string>
 										<reference key="NSSuperview" ref="1034896011"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="253488222"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -118,7 +113,6 @@
 								</array>
 								<string key="NSFrameSize">{736, 737}</string>
 								<reference key="NSSuperview" ref="162229047"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="272662106"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor" id="262949035">
@@ -132,7 +126,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{70, 55.5}, {122, 122}}</string>
 								<reference key="NSSuperview" ref="162229047"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="888173391"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -147,7 +140,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{70, 277.5}, {122, 122}}</string>
 								<reference key="NSSuperview" ref="162229047"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="232597333"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -159,7 +151,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{70, 491.5}, {122, 122}}</string>
 								<reference key="NSSuperview" ref="162229047"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="772224698"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -171,7 +162,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{305, 55.5}, {122, 122}}</string>
 								<reference key="NSSuperview" ref="162229047"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="832023160"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -183,7 +173,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{543, 55.5}, {122, 122}}</string>
 								<reference key="NSSuperview" ref="162229047"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="756467615"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -195,7 +184,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{56.5, 194}, {37, 37}}</string>
 								<reference key="NSSuperview" ref="162229047"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="557709434"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -210,7 +198,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{108, 194}, {100, 37}}</string>
 								<reference key="NSSuperview" ref="162229047"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="148719770"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -241,7 +228,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{55, 416}, {40, 37}}</string>
 								<reference key="NSSuperview" ref="162229047"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="672936150"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -253,7 +239,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{108, 416}, {100, 37}}</string>
 								<reference key="NSSuperview" ref="162229047"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="547149731"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -274,7 +259,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{55, 632}, {40, 37}}</string>
 								<reference key="NSSuperview" ref="162229047"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="562490960"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -286,7 +270,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{108, 632}, {100, 37}}</string>
 								<reference key="NSSuperview" ref="162229047"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1018592970"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -307,7 +290,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{290, 194}, {40, 37}}</string>
 								<reference key="NSSuperview" ref="162229047"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="78392054"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -319,7 +301,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{342, 194}, {100, 37}}</string>
 								<reference key="NSSuperview" ref="162229047"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="326895524"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -340,7 +321,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{527, 194}, {40, 37}}</string>
 								<reference key="NSSuperview" ref="162229047"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="732952944"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -352,7 +332,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{580, 194}, {100, 37}}</string>
 								<reference key="NSSuperview" ref="162229047"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="35052436"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -371,7 +350,6 @@
 						</array>
 						<string key="NSFrame">{{16, 115}, {736, 737}}</string>
 						<reference key="NSSuperview" ref="765826318"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1034896011"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="262949035"/>
@@ -384,7 +362,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{16, 13}, {88, 80}}</string>
 						<reference key="NSSuperview" ref="765826318"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="425035439"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -407,11 +384,11 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">back@2x.png</string>
 						</object>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="205729347">
+						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">2</int>
 							<double key="pointSize">15</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="572085463">
+						<object class="NSFont" key="IBUIFont">
 							<string key="NSName">Helvetica-Bold</string>
 							<double key="NSSize">15</double>
 							<int key="NSfFlags">16</int>
@@ -422,7 +399,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{163, 0}, {484, 93}}</string>
 						<reference key="NSSuperview" ref="765826318"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="162229047"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -437,7 +413,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{16, 881}, {276, 100}}</string>
 						<reference key="NSSuperview" ref="765826318"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="103081089"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -452,7 +427,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{312, 892}, {228, 78}}</string>
 						<reference key="NSSuperview" ref="765826318"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="425177082"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="262949035"/>
@@ -485,7 +459,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{312, 898}, {67, 67}}</string>
 						<reference key="NSSuperview" ref="765826318"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="318598240"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -500,8 +473,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{556, 890}, {196, 83}}</string>
 						<reference key="NSSuperview" ref="765826318"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -515,15 +486,21 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">orange_button@2x.png</string>
 						</object>
-						<reference key="IBUIFontDescription" ref="205729347"/>
-						<reference key="IBUIFont" ref="572085463"/>
+						<object class="IBUIFontDescription" key="IBUIFontDescription">
+							<int key="type">2</int>
+							<double key="pointSize">29</double>
+						</object>
+						<object class="NSFont" key="IBUIFont">
+							<string key="NSName">Helvetica-Bold</string>
+							<double key="NSSize">29</double>
+							<int key="NSfFlags">16</int>
+						</object>
 					</object>
 					<object class="IBUIImageView" id="103081089">
 						<reference key="NSNextResponder" ref="765826318"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{117, 878}, {72, 72}}</string>
+						<string key="NSFrame">{{117, 888}, {72, 72}}</string>
 						<reference key="NSSuperview" ref="765826318"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="900323963"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -532,7 +509,6 @@
 				</array>
 				<string key="NSFrameSize">{768, 1004}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="20158916"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -585,6 +561,24 @@
 						<reference key="destination" ref="765826318"/>
 					</object>
 					<int key="connectionID">37</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">buyCoin:</string>
+						<reference key="source" ref="318598240"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">39</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">clickBack:</string>
+						<reference key="source" ref="68029652"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">38</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -834,52 +828,9 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">37</int>
+			<int key="maxID">39</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">PPViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PPViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">VendingController</string>
-					<string key="superclassName">PPViewController</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="buyCoinButton">UIButton</string>
-						<string key="coinsButton">UIButton</string>
-						<string key="itemListScrollView">UIScrollView</string>
-						<string key="outItem">UIImageView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="buyCoinButton">
-							<string key="name">buyCoinButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="coinsButton">
-							<string key="name">coinsButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="itemListScrollView">
-							<string key="name">itemListScrollView</string>
-							<string key="candidateClassName">UIScrollView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="outItem">
-							<string key="name">outItem</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/VendingController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
